--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "rxjs": "~7.4.0",
+    "tic-tac-toe-minimax": "^1.0.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
