--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "angularx-social-login": "^4.0.1",
+    "bootstrap": "^5.1.3",
+    "materialize-social": "^1.0.3",
     "rxjs": "~7.4.0",
     "tic-tac-toe-minimax": "^1.0.8",
     "tslib": "^2.3.0",
