--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.1.0",
     "angularx-social-login": "^4.0.1",
     "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
     "materialize-social": "^1.0.3",
     "rxjs": "~7.4.0",
     "tic-tac-toe-minimax": "^1.0.8",
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "~13.1.2",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
